Day_3/Lesson_2_kubernetes_security/manifests/03-test-pod-as-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rbac-test-pod
  namespace: default
spec:
  serviceAccountName: lab-viewer
  containers:
  - name: kubectl
    image: bitnami/kubectl:latest
    command: ["sleep", "3600"]
