Day_3/Lesson_2_kubernetes_security/manifests/04-test-pod.yaml
# RBAC Lab - Pod running as the lab-viewer ServiceAccount
apiVersion: v1
kind: Pod
metadata:
  name: rbac-test-pod
  namespace: default
spec:
  serviceAccountName: lab-viewer
  containers:
  - name: kubectl
    image: bitnami/kubectl:latest
    command: ["sleep", "3600"]
