Day_3/Lesson_2_kubernetes_security/manifests/08-secret-consumer-pod.yaml
# Secrets Lab - Step 2: Consume a secret via env var AND volume mount
apiVersion: v1
kind: Pod
metadata:
  name: secret-consumer
  namespace: default
spec:
  containers:
  - name: app
    image: busybox:1.28
    command: ["sleep", "3600"]
    volumeMounts:
    # Method 2: Volume mount (all keys become files)
    - name: secret-vol
      mountPath: /etc/secrets
      readOnly: true
  volumes:
  - name: secret-vol
    secret:
      secretName: lab-secret
