Day_3/Lesson_2_kubernetes_security/manifests/11-server-pod.yaml
# Network Policy Lab - The server pod (nginx)
apiVersion: v1
kind: Pod
metadata:
  name: server-pod
  namespace: default
  labels:
    role: server
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
