Day_3/Lesson_2_kubernetes_security/manifests/12-client-pod.yaml
# Network Policy Lab - The client pod (curl)
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  namespace: default
  labels:
    role: client
spec:
  containers:
  - name: curl
    image: curlimages/curl:latest
    command: ["sleep", "3600"]
